--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       </div>
     </div>
     <script src="bower_components/angular/angular.min.js"></script>
+    <script src="bower_components/angular-resource/angular-resource.min.js"></script>
     <script src="guestbook.js"></script>
   </body>
 </html>
