--- a/index.html
+++ b/index.html
@@ -8,40 +8,10 @@
   <body>
     <div class="container">
       <h1>Guestbook</h1>
-      <div ng-controller="MainController">
-        <div>
-          <h2>Post Greeting</h2>
-          <form ng-submit="submit()" name="form">
-            <div class="form-group">
-              <label>Name</label>
-              <input class="form-control" ng-model="newGreeting.author">
-            </div>
-            <div class="form-group" ng-class="{'has-error': form.content.$invalid && form.content.$dirty}">
-              <label>Message</label>
-              <textarea class="form-control" rows="3" ng-model="newGreeting.content" name="content" required></textarea>
-              <p class="help-block" ng-show="form.content.$invalid && form.content.$dirty">Required</p>
-            </div>
-            <div class="form-group">
-              <input type="submit" class="btn btn-default" value="Submit">
-            </div>
-          </form>
-        </div>
-        <div>
-          <h2>Greetings</h2>
-          <div ng-repeat="greeting in greetings">
-            <span ng-if="greeting.author">
-              <b>{{greeting.author}}</b> wrote:
-            </span>
-            <span ng-if="!greeting.author">
-              An anonymous person wrote:
-            </span>
-            <blockquote>{{greeting.content}}</blockquote>
-          </div>
-        </div>
-      </div>
-    </div>
+      <div ng-view></div>
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="bower_components/angular-resource/angular-resource.min.js"></script>
+    <script src="bower_components/angular-route/angular-route.min.js"></script>
     <script src="guestbook.js"></script>
   </body>
 </html>
